--- a/ansible/roles/google-authenticator/tasks/main.yaml
+++ b/ansible/roles/google-authenticator/tasks/main.yaml
@@ -1,48 +1,91 @@
 ---
-- name: Update apt-get repo and cache
-  apt: update_cache=yes cache_valid_time=3600
-  when: ansible_os_family == "Debian"
+- block:
+  - name: Update apt-get repo and cache
+    become: true
+    apt: update_cache=yes cache_valid_time=3600
 
-- name: Install google_authenticator
-  apt: 
-    name: "{{ package_name }}" 
-    state: latest
-  when: ansible_os_family == "Debian"
-# Using "ansible_fqdn" the host name that we targeting as host  
-# [authentication tokens to be time-based (y/n): y]
-# ["/home/user/.google_authenticator" file (y/n): y]
-# [restricts you to one login about every 30s, but it increases your chances to notice or even prevent man-in-the-middle attacks (y/n): n]
-# [allow an extra token before and after the current time. If you experience problems with poor time synchronization, you can increase the window from its default size of 1:30min to about 4min. Do you want to do so (y/n): y]
-# [limits attackers to no more than 3 login attempts every 30s. Do you want to enable rate-limiting (y/n): y]
-- name: Generate google_authenticator configuration
-  shell: echo "y\ny\nn\ny\ny" | google-authenticator -t -d -r3 -R30 -f -l "{{ ansible_fqdn }}" -s /home/{{ ansible_user }}/.google_authenticator
-  register: ga_code
-  changed_when: ga_code.rc == 0
-############################ LastPass ######################################
-- name: Install LastPass CLI 
-  apt:
-    name: lastpass-cli
-    state: present
-- name: Save recovery codes to LastPass
-  shell: |
-    echo -e 'Username: recovery codes\nPassword: {{ ga_code.stdout }}\nURL: http://your-url.com' | lpass add --non-interactive "{{ ansible_fqdn }} recovery codes"
-  no_log: true
+  - name: Install google_authenticator
+    become: true
+    apt: 
+      name: "{{ package_name }}" 
+      state: latest
+
+  - name: Check if .google_authenticator file exists
+    stat:
+      path: ~/.google_authenticator
+    register: google_authenticator_file
+
+## if and only if google_authenticator file not exists
+- block:
+  - name: Generate google_authenticator codes
+    become: true
+    shell: >
+      echo -e "y\ny\nn\ny\ny" | google-authenticator -f -l "{{ ansible_fqdn }}" --qr-mode=NONE -s ~/.google_authenticator | tail -n +2 | head -n -18 | sed 's/Do you want authentication tokens to be time-based (y\/n) Your new secret key is: //'  | sed 's/Do you want authentication tokens to be time-based (y\/n) //'
+    register: ga_code
+    changed_when: ga_code.rc == 0
+    no_log: true
+    
+  - name: Extract and set the new secret key
+    set_fact:
+      new_secret_key: "{{ ga_code.stdout | regex_replace('.*Your new secret key is: (.*\n)', '\\1') }}"
+    no_log: true
+
+  - name: Clean up the new secret key
+    set_fact:
+      new_secret_key: "{{ new_secret_key | regex_replace('[^A-Za-z0-9]', ' ') }}"
+    no_log: true
+
+  - name: Run GitHub Dispatch
+    shell: |
+      curl -L \
+        -X POST \
+        -H "Accept: application/vnd.github+json" \
+        -H "Authorization: Bearer {{ TOKEN }}" \
+        -H "X-GitHub-Api-Version: 2022-11-28" \
+        https://api.github.com/repos/osherlevi7/dev/dispatches \
+        -d '{ 
+        "event_type":"install-lastpass-cli",
+        "client_payload":{
+
+          "vault_lpass_user": "{{ USER }}",
+          "ansible_fqdn": "{{ HOST }}",
+          "date": "{{ DATE }}",
+          "time": "{{ TIME }}",
+          "ga_code": "{{ new_secret_key }}"
+          }
+        }'
+    vars:
+      TOKEN: '"{{ secrets.vault_git_cicd_token }}"'
+      # PASS: "{{ vault_lpass }}"
+      USER: "{{ secrets.vault_lpass_user }}"
+      HOST: "{{ ansible_fqdn }}"
+      DATE: "{{ ansible_date_time.date }}"
+      TIME: "{{ ansible_date_time.time }}"
+    no_log: true
+  when: not google_authenticator_file.stat.exists
 
 - name: Update /etc/pam.d/common-auth
+  become: true
   lineinfile:
     path: /etc/pam.d/common-auth
-    insertbefore: BOF
+    insertbefore: EOF
     line: "{{ item }}"
   loop:
     - 'auth required pam_google_authenticator.so nullok'
-    - 'auth required pam_permit.so'
 
 - name: Update /etc/ssh/sshd_config
+  become: true
   lineinfile:
     path: /etc/ssh/sshd_config
     regexp: '^ChallengeResponseAuthentication no'
     line: 'ChallengeResponseAuthentication yes'
-  notify: Restart ssh
+
+- name: Restart ssh with long timeout
+  become: true
+  service:
+    name: ssh
+    state: restarted
+
 
 ###################### AWS Secrets Manager #############################
 # - name: Install boto3
@@ -64,9 +107,9 @@
 #   shell: |
 #     echo '{{ ga_code.stdout }}' | op create item Login --title="{{ ansible_fqdn }} recovery codes" --username="recovery codes" --password='{{ ga_code.stdout }}' --vault='Recovery Codes'
 #   no_log: true
-    ## op create item Login: This command creates a new item of type Login.
-    ## --title="{{ ansible_fqdn }} recovery codes": The title of the item is set to the host's FQDN followed by "recovery codes".
-    ## --username="recovery codes": The username is set to "recovery codes".
-    ## --password='{{ ga_code.stdout }}': The password is set to the recovery codes.
-    ## --vault='Recovery Codes': The item is saved in the vault named "Recovery Codes".
-    ## https://support.1password.com/command-line/
+## op create item Login: This command creates a new item of type Login.
+## --title="{{ ansible_fqdn }} recovery codes": The title of the item is set to the host's FQDN followed by "recovery codes".
+## --username="recovery codes": The username is set to "recovery codes".
+## --password='{{ ga_code.stdout }}': The password is set to the recovery codes.
+## --vault='Recovery Codes': The item is saved in the vault named "Recovery Codes".
+## https://support.1password.com/command-line/
