--- a/.github/workflows/gke-restart-cluster-manually.yaml
+++ b/.github/workflows/gke-restart-cluster-manually.yaml
@@ -1,3 +1,7 @@
+name: "[gke] | Restart a GKE cluseter"
+# The GitHub Actions docs (https://docs.github.com/en/actions/reference/workflow-syntax-for-github-actions#on)
+# describe other options for 'on', 'pull_request' is a good default.
+
 # GHAction for restart cluster from a branch if no GitOpt tool is involved. 
 on:
   workflow_dispatch:
