--- a/.github/workflows/api-ga-code-to-lastpass.yaml
+++ b/.github/workflows/api-ga-code-to-lastpass.yaml
@@ -1,4 +1,4 @@
-name: "[API] Provision TOTP via LastPass CLI"
+name: "[API] | Provision TOTP via LastPass CLI"
 on:
   repository_dispatch:
     types: 
