--- a/.github/workflows/tf-infracost.yaml
+++ b/.github/workflows/tf-infracost.yaml
@@ -1,4 +1,5 @@
-name: "[cost] | Provision cost on terraform""
+name: "[cost] | Provision cost on terraform"
+
 
 # The GitHub Actions docs (https://docs.github.com/en/actions/reference/workflow-syntax-for-github-actions#on)
 # describe other options for 'on', 'pull_request' is a good default.
