--- a/dev-tools/general/dashboard/dashboard.yaml
+++ b/dev-tools/general/dashboard/dashboard.yaml
@@ -16,7 +16,7 @@ spec:
       containers:
       - name: dashboard
         image: osherlevi7/dashboard:main-latest
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 5000
         resources:
