--- a/dev-tools/general/dashboard/dashboard.yaml
+++ b/dev-tools/general/dashboard/dashboard.yaml
@@ -3,6 +3,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: dashboard
+  namespace: dashboard
 spec:
   replicas: 1
   selector:
@@ -13,6 +14,8 @@ spec:
       labels:
         app: dashboard
     spec:
+      imagePullSecrets:
+      - name: my-docker-creds
       containers:
       - name: dashboard
         image: osherlevi7/dashboard:main-latest
@@ -31,6 +34,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: dashboard
+  namespace: dashboard
 spec:
   selector:
     app: dashboard
@@ -38,7 +42,7 @@ spec:
   - protocol: TCP
     port: 5000
     targetPort: 5000
-  type: NodePort
+  type: LoadBalancer
 # ---
 # apiVersion: v1
 # kind: ConfigMap
