--- a/k3s/monitoring-stack/values.yaml
+++ b/k3s/monitoring-stack/values.yaml
@@ -32,7 +32,7 @@ defaultRules:
 alertmanager:
   enabled: true 
   alertmanagerSpec:
-    externalURL: 'http://grafana.scopiolabs.com/'
+    externalURL: 'http://grafana.osherlevi7.com/'
   config:
     global:
       slack_api_url: 'https://hooks.slack.com/'  # Replace with your Slack webhook URL
