--- a/k3s/treafik/dashboard/secret-dashboard.yaml
+++ b/k3s/treafik/dashboard/secret-dashboard.yaml
@@ -6,4 +6,4 @@ metadata:
   namespace: traefik
 type: Opaque
 data:
-  users: VVNFUjokYXByMSRQMUV2ek9JciQvRUdpQjNJVUVFUWR5ZEZlelFUWmUwCgo=
+  users: 
