--- a/k3s/monitoring-stack/values.yaml
+++ b/k3s/monitoring-stack/values.yaml
@@ -6,43 +6,48 @@ defaultRules:
     alertmanager: true
     etcd: false
     configReloaders: true
-    general: true
+    general: false
     k8s: true
     kubeApiserverAvailability: true
     kubeApiserverBurnrate: true
     kubeApiserverHistogram: true
     kubeApiserverSlos: true
-    kubelet: true
-    kubeProxy: true
+    kubelet: false
+    kubeProxy: false
     kubePrometheusGeneral: false
     kubePrometheusNodeRecording: true
     kubernetesApps: true
     kubernetesResources: true
     kubernetesStorage: true
     kubernetesSystem: true
-    kubeScheduler: true
+    kubeScheduler: false
     kubeStateMetrics: true
     network: true
     node: true
     nodeExporterAlerting: true
     nodeExporterRecording: true
-    prometheus: true
-    prometheusOperator: true
+    prometheus: false
 
+    prometheusOperator: false
 alertmanager:
   enabled: true 
   alertmanagerSpec:
-    externalURL: 'http://grafana.osherlevi7.com/'
+    externalURL: 'grafana.k3s.domain.com'
   config:
     global:
-      slack_api_url: 'https://hooks.slack.com/'  # Replace with your Slack webhook URL
+      slack_api_url: 'https://hooks.slack.com/services/T04RBAEHU//'  # Replace with your Slack webhook URL
     receivers:
       - name: 'slack-notifications'
         slack_configs:
           - channel: 'k3s-alertmanager'  # Replace with your Slack channel
             send_resolved: true
             title: '{{ range .Alerts }}{{ .Annotations.summary }}\n{{ end }}'
-            text: '{{ range .Alerts }}{{ .Annotations.description }}\n{{ end }}'
+            text: >-
+              {{ range .Alerts }}
+              *Alert:* {{ .Annotations.summary }} - `{{ .Labels.severity }}`
+              *Description:* {{ .Annotations.description }}
+              *Link:* <http://grafana.k3s.domain.com/alerting/list|View in Grafana>
+              {{ end }}
     route:
       group_by: ['alertname']
       group_wait: 30s
@@ -54,7 +59,7 @@ alertmanager:
             severity: critical
           receiver: 'slack-notifications'
   ingress:
-    enabled: true
+    enabled: false
 
 
 grafana:
@@ -72,7 +77,21 @@ grafana:
     passwordKey: admin-password
   service:
     type: LoadBalancer
-    loadBalancerIP: "192.168.0.223"
+    loadBalancerIP: "192.168.0.227"
+  # ingress:
+  #   enabled: true
+  #   annotations:
+  #     kubernetes.io/ingress.class: "traefik-external"
+  #     cert-manager.io/cluster-issuer: "letsencrypt-staging"
+  #   hosts:
+  #     - grafana.domain.com
+  #   paths:
+  #     - /
+  #   tls:
+  #     - hosts:
+  #         - grafana.domain.com
+  #       secretName: grafana-com-tls
+
 
 kubeApiServer:
   enabled: true
@@ -87,7 +106,7 @@ kubelet:
         targetLabel: instance
 
 kubeControllerManager:
-  enabled: true
+  enabled: false
   endpoints: # ips of servers 
     - 192.168.0.22
     - 192.168.0.19
@@ -100,7 +119,7 @@ kubeDns:
   enabled: false
 
 kubeEtcd:
-  enabled: true
+  enabled: false
   endpoints: # ips of servers
     - 192.168.0.22
     - 192.168.0.19
@@ -111,14 +130,14 @@ kubeEtcd:
     targetPort: 2381
 
 kubeScheduler:
-  enabled: true
+  enabled: false
   endpoints: # ips of servers
     - 192.168.0.22
     - 192.168.0.19
     - 192.168.0.82
 
 kubeProxy:
-  enabled: true
+  enabled: false
   endpoints: # ips of servers
     - 192.168.0.22
     - 192.168.0.19
@@ -180,21 +199,22 @@ prometheus-node-exporter:
       memory: 2048Mi
 
 prometheusOperator:
-  enabled: true
+  enabled: false
   prometheusConfigReloader:
     resources:
       requests:
-        cpu: 200m
-        memory: 50Mi
+        memory: "1Gi"
+        cpu: "500m"
       limits:
-        memory: 100Mi
+        memory: "2Gi"
+        cpu: "1"
 
 prometheus:
   enabled: true
   prometheusSpec:
     scrapeInterval: 30s
     evaluationInterval: 30s
-    replicas: 1
+    replicas: 3
     replicaExternalLabelName: "replica"
     ruleSelectorNilUsesHelmValues: false
     serviceMonitorSelectorNilUsesHelmValues: false
@@ -203,6 +223,13 @@ prometheus:
     retention: 6h
     enableAdminAPI: true
     walCompression: true
+    resources:
+      requests:
+        memory: "1Gi"
+        cpu: "500m"
+      limits:
+        memory: "4Gi"
+        cpu: "2"
 
 thanosRuler:
   enabled: false
